bk_ida/gccida/g1/pending_xref_error
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/pending_xref_error/src/c-decl.c:3429:17: error: use of undeclared identifier 'stru_634008'
( const char *)&stru_634008.block.supercontext, 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/pending_xref_error/src/obj/c-decl.o] Error 1
